--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -21,8 +21,8 @@
 
 <div id="header-menu" class="header-menu dNone">
     <div class="header-subMenu">
-        <a href="/legal-notice.html">Legal Notice</a>
-        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="./legal-notice.html">Legal Notice</a>
+        <a href="./legal-notice.html">Privacy Policy</a>
         <a href="index.html">Log out</a>
     </div>
 </div>
