--- a/css/add_task.css
+++ b/css/add_task.css
@@ -33,7 +33,7 @@
 .task-input-container {
     display: flex;
     height: fit-content;
-    margin:64px;
+    margin: 64px;
 }
 
 .task-input-container .task-input {
@@ -49,7 +49,7 @@
     gap: 20px;
     min-width: 350px;
     max-width: 550px;
-    width:100%;
+    width: 100%;
     padding-right: 32px;
 }
 
@@ -70,7 +70,7 @@
 }
 
 
-#newTaskAssignedContact,
+
 #newTaskSubTask,
 .subtask-field,
 #newTaskTitle,
@@ -84,6 +84,9 @@
     border: 1px solid #D1D1D1;
     position: relative;
 }
+
+
+
 
 .subtask-field {
     width: 100%;
@@ -430,7 +433,7 @@
 
 #newTaskPriority {
     margin: 12px 0px;
-    width: 100%;
+
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
@@ -457,26 +460,59 @@
     background-color: white;
     border: 1px solid #D1D1D1;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .priority-button:hover {
     box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.166);
 }
 
-.priority-button-urgent-selected {
+/* Hide the radio buttons */
+input[type="radio"] {
+    display: none;
+}
+
+/* Style the label when the radio button is checked */
+
+
+input[type="radio"]:checked+#urgentButton {
     background-color: orangered;
     color: white;
 }
 
-.priority-button-medium-selected {
+input[type="radio"]:checked+#mediumButton {
     background-color: orange;
     color: white;
 }
 
-.priority-button-low-selected {
+input[type="radio"]:checked+#lowButton {
     background-color: #7AE229;
     color: white;
 }
+
+input[type="radio"]:checked + .priority-button img {
+    filter: brightness(0) invert(1);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -503,34 +539,13 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.white-symbol {
-    filter: brightness(0) invert(1);
-}
-
 #formOptions {
     width: calc(100% - 128px);
     display: flex;
     justify-content: flex-end;
     position: relative;
     gap: 10px;
-    margin:64px;
+    margin: 64px;
 }
 
 .animated-icon {
