--- a/css/add_task.css
+++ b/css/add_task.css
@@ -243,8 +243,8 @@
     flex-direction: column;
     justify-content: flex-start;
     border: 1px solid #D1D1D1;
-    border-radius: 10px;
-
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .assign-contact-option {
@@ -493,6 +493,11 @@ input[type="radio"]:checked+#lowButton {
 input[type="radio"]:checked + .priority-button img {
     filter: brightness(0) invert(1);
 }
+
+.white-symbol{
+    filter: brightness(0) invert(1);
+}
+
 
 
 
