--- a/assets/templates/add_task_template.html
+++ b/assets/templates/add_task_template.html
@@ -2,7 +2,7 @@
 
     <div include-html="./assets/templates/add_contact.html"></div>
     <form id="addTaskContainer">
-        <div class="add-task" onchange="saveCurrentEntriesToTask()">
+        <div class="add-task">
             <h1>Add Task</h1>
             <div class="task-input-container">
                 <div class="task-input-col">
