--- a/css/add_task.css
+++ b/css/add_task.css
@@ -1,8 +1,4 @@
-#addTaskContainer {
-    display: flex;
-    justify-content: start;
-    align-items: flex-start;
-    flex-direction: column;
+.add-task-page-container {
     position: absolute;
     left: 232px;
     right: 0;
@@ -10,6 +6,15 @@
     bottom: 0;
     margin: 0;
     overflow-y: scroll;
+}
+
+#addTaskContainer {
+    display: flex;
+    justify-content: start;
+    align-items: flex-start;
+    flex-direction: column;
+    position: relative;
+
 }
 
 #addTaskContainer .add-task {
@@ -67,6 +72,8 @@
 #addTaskContainer .task-category,
 #addTaskContainer .task-subtask {
     width: 100%;
+    font-family: 'Inter', sans-serif;
+
 }
 
 #addTaskContainer #newTaskSubTask,
@@ -81,6 +88,7 @@
     margin: 12px 0;
     border: 1px solid #D1D1D1;
     position: relative;
+    font-family: 'Inter', sans-serif;
 }
 
 #addTaskContainer .subtask-field {
@@ -97,11 +105,11 @@
     width: 100%;
     font-size: 20px;
     margin: 12px 0;
-    font-family: 'Inter';
     padding: 12px 21px 12px 21px;
     box-sizing: border-box;
     border: 1px solid #D1D1D1;
     border-radius: 10px;
+    font-family: 'Inter', sans-serif;
 }
 
 /* Category Dropdown */
@@ -116,10 +124,6 @@
     align-items: center;
     justify-content: space-between;
     overflow: hidden;
-}
-
-#addTaskContainer .hide{
-    display: none;
 }
 
 #addTaskContainer .category-select select {
@@ -272,6 +276,7 @@
     border-radius: 10px;
     padding: 6px 16px 6px 16px;
     z-index: 10;
+    font-family: 'Inter', sans-serif;
 }
 
 #addTaskContainer .shown-subtask:hover {
@@ -403,6 +408,7 @@
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     cursor: pointer;
+    font-family: 'Inter', sans-serif;
 }
 
 #addTaskContainer .priority-button:hover {
@@ -430,7 +436,7 @@
     color: white;
 }
 
-#addTaskContainer input[type="radio"]:checked + .priority-button img {
+#addTaskContainer input[type="radio"]:checked+.priority-button img {
     filter: brightness(0) invert(1);
 }
 
@@ -496,6 +502,7 @@
     from {
         top: 100vh;
     }
+
     to {
         align-items: center;
     }
@@ -524,15 +531,21 @@
     display: flex !important;
 }
 
+#addTaskContainer .hide {
+    display: none;
+}
+
 /* Media Queries */
 @media (max-width: 1250px) {
     #addTaskContainer #newTaskPriority {
         flex-direction: column;
     }
+
     #addTaskContainer .task-input-container {
         flex-direction: column;
     }
-    #addTaskContainer .task-input-not-first-col {
+
+    #addTaskContainer .task-input-container .task-input-not-first-col {
         margin-top: 32px;
         border: none;
         padding-left: 0;
@@ -543,18 +556,21 @@
     #addTaskContainer .task-input-col {
         padding-right: 32px;
     }
+
     #addTaskContainer #newTaskPriority {
         flex-direction: row;
     }
 }
 
 @media (max-width: 800px) {
-    #addTaskContainer #addTaskContainer {
+
+    .add-task-page-container {
         left: 0;
         right: 0;
         top: 82px;
         bottom: 82px;
     }
+
     #addTaskContainer #newTaskPriority {
         flex-direction: column;
     }
