--- a/css/board.css
+++ b/css/board.css
@@ -418,6 +418,18 @@
 }
 
 
+.category-technical {
+    background-color: blue;
+    color: white;
+}
+
+.category-contact-story {
+    background-color: green;
+    color: black;
+}
+
+
+
 
 
 
